--- a/Views/General/General.cshtml
+++ b/Views/General/General.cshtml
@@ -15,7 +15,7 @@
     
     <ul class="nav nav-tabs justify-content-end" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
-            <button class="nav-link" id="general-tab" data-bs-toggle="tab" data-bs-target="#general-tab-pane" type="button" role="tab" aria-controls="general-tab-pane" aria-selected="true">general</button>
+            <button class="nav-link active" id="general-tab" data-bs-toggle="tab" data-bs-target="#general-tab-pane" type="button" role="tab" aria-controls="general-tab-pane" aria-selected="true">general</button>
         </li>
         <li class="nav-item" role="presentation">
             <button class="nav-link" id="residence-tab" data-bs-toggle="tab" data-bs-target="#residence-tab-pane" type="button" role="tab" aria-controls="residence-tab-pane" aria-selected="false">Info de residencia</button>
